--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="wrap">
           <div class="img-wrap">
-            <img src="./images/image-qr-code.png" alt="qr-code">
+            <img src="image-qr-code.png" alt="qr-code">
           </div>
           <div class="content-wrap">
             <h6>Improve your front-end skills by building projects</h6>
